﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-12-14 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/Config.class.php: added check is_readable for user config file

2005-12-14 Michal Čihař  <michal@cihar.com>
    * libraries/config.default.php, Documentation.html: Transliterate invalid
      chars by default (RFE #1380255).
    * left.php: Resurrect database link in light frame (bug #1373804).
    * index.php, js/querywindow.js: Move navigation frame to right for rtl
      languages.

2005-12-13 Michal Čihař  <michal@cihar.com>
    * querywindow.php: Fix query history displaying (bug #1374639).

2005-12-12 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Use same format of version file as in upgrade.pl.

2005-12-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.inc.php, libraries/grab_globals.inc.php:
      preprare removal of grab_globals:
       - moved stuff from grab_globals into common.inc.php
       - check/init global required variables like: $lang, $server, $db, $table,
         $convcharset, $goto, $back, $sql_query
       - introduced $goto-whitelist
       - PEAR coding standard
    * libraries/common.inc.php, libraries/auth/cookie.auth.lib.php,
      libraries/auth/http.auth.lib.php, libraries/grab_globals.lib.php,
      libraries/relation.lib.php, scripts/setup.php:
       - check magic_quotes only once in common.inc.php
    * css/phpmyadmin.css.php, tbl_properties_operations.php:
      styled table operations dialog
    * db_search.php: revised
    * libraries/common.inc.php: fixed high ascii char

2005-12-11 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/tbl_properties_links.inc.php: bug #1375752,
      wrong page after insert (losing many URL parameters)

2005-12-11 Michal Čihař  <michal@cihar.com>
    * scripts/create-release.sh, scripts/upgrade.pl: Use same URL for updating